--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,24 @@
   text-align: center;
 }
 
+.custom-width {
+  width: 50%;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+}
+.btn-copy{
+  font-size: 20px;
+  height: 50px;
+  font-family: bold;
+}
+
+input[type="range"] {
+  height: 80px; /* Increase height */
+  width: 25%;
+  
+}
+#lengthLabel, .input-group{
+  font-size: 20px;
+  font-family: bold;
+}
